fixed maven